# libmsr

./: .gitignore  API  AUTHORS  BUGS  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README  README.md  TODO  VERSION  Wgremlin.w  _r_e_a_d_m_e_8md.html  annotated.html  app.c  autoconf.c  blr_util.c  blr_util.h  changelog.txt  classes.html  cpuid_8c.html  cpuid_8c__incl.map  cpuid_8h.html  cpuid_8h__dep__incl.map  cpuid_8h__incl.map  cpuid_8h__incl.md5  cpuid_8h_source.html  csr__core_8c.html  csr__core_8c__incl.map  csr__core_8c__incl.md5  csr__core_8h.html  csr__core_8h__dep__incl.map  csr__core_8h__incl.map  csr__core_8h__incl.md5  csr__core_8h_source.html  csr__imc_8c.html  csr__imc_8h.html  csr__imc_8h__dep__incl.map  (+273 more)
Examples/: cleanup.c
cmd/: CMakeLists.txt  msr-turbo.c  msr.c
data/: sleep100_PowTherm.txt  sleep100_PowThermQ.txt  sleep100_PowThermR.txt  sleep100init100fin_2tasks.txt  sleep100init100fin_8tasks.txt  sleep100sec.txt  sleep200_1timer3sleep4none.txt  sleep60sec.txt  sleepData.txt  sleepData2.txt  sleepData2_n2.txt
data/sleep100Tests/: core0read_2tasks.txt  core10read_2tasks.txt  core11read_2tasks.txt  core12read_2tasks.txt  core13read_2tasks.txt  core14read_2tasks.txt  core15read_2tasks.txt  core1read_2tasks.txt  core2read_2tasks.txt  core3read_2tasks.txt  core4read_2tasks.txt  core5read_2tasks.txt  core6read_2tasks.txt  core7read_2tasks.txt  core8read_2tasks.txt  core9read_2tasks.txt  readingCoreHeatup.txt
demoapps/powmon/: CMakeLists.txt  Makefile.am  README.md  README.txt  common.c  configure.ac  ghighres.c  highlander.c  power_wrapper_dynamic.c  power_wrapper_static.c  powmon.c  rapl.h  rapl2.c
demoapps/powmon/m4/: de_libmsr_version.m4
demoapps/powmon/src/: Makefile.am  common.c  ghighres.c  highlander.c  highlander.h  power_wrapper_dynamic.c  power_wrapper_static.c  powmon.c  rapl.h  rapl1.c  rapl2.c
demoapps/powsched/: Makefile.am  README.txt  automata_dfn.h  availmetrics.tbl  cluster.tbl  configure.ac  env.sh  kick.gapl  kickactuator.tbl  metrictoggles.tbl  msr_stub.h  newstate.tbl  nodestatechange.gapl  power_actuator.c  power_monitor.c  poweractuals.tbl  powerin.tbl  powerstate.gapl  powertargets.tbl  powsched.c  powsched.gapl  rapl.h  rapl1.c  rapl2.c  start.sh  stateupdate.gapl  z_run.moab  z_run.sbatch
demoapps/powsched/m4/: de_libmsr_version.m4  de_stat.m4
documentation/: API  OnTheCreationOfGremlins
dox/: CMakeLists.txt  Doxyfile  classes.html  cpuid_8c.html  cpuid_8c__incl.md5  cpuid_8h.html  cpuid_8h__dep__incl.md5  cpuid_8h_source.html  csr__core_8c.html  csr__core_8h.html  csr__core_8h__dep__incl.md5  csr__imc_8c.html  csr__imc_8c__incl.map  csr__imc_8c__incl.md5  csr__imc_8h.html  dir_000001_000000.html  files.html  functions_0x63.html  functions_0x66.html  functions_0x68.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6f.html  functions_0x70.html  functions_0x73.html  functions_0x74.html  functions_vars_0x62.html  functions_vars_0x64.html  functions_vars_0x66.html  functions_vars_0x6a.html  functions_vars_0x6c.html  functions_vars_0x6f.html  functions_vars_0x70.html  functions_vars_0x75.html  functions_vars_0x77.html  functions_vars_0x78.html  globals_0x61.html  globals_0x62.html  globals_0x63.html  (+126 more)
dox/search/: all_61.js  all_62.js  all_63.js  all_65.js  all_66.js  all_68.js  all_6c.js  all_6f.js  all_70.js  all_74.js  all_75.js  all_78.js  classes_63.js  classes_72.js  classes_74.js  classes_75.js  defines_5f.js  defines_65.js  defines_66.js  defines_69.js  defines_6e.js  defines_70.js  defines_73.js  defines_75.js  defines_78.js  enums_6c.js  enumvalues_63.js  enumvalues_66.js  enumvalues_6a.js  enumvalues_70.js  enumvalues_75.js  enumvalues_77.js  files_63.js  files_6c.js  files_70.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_69.js  (+13 more)
examples/: Makefile  rapl-dummy.c  test-exec.c
gremlins/: .gitignore  Makefile  exampleFile.c  exampleFile.w  helloWorld_mpi.c  power.w  powerThermal.w  script.msub  thermal.w
headers/: intel2D.h  intel3E.h  intel3F.h
include/: CMakeLists.txt  cpuid.h  csr_core.h  csr_imc.h  libmsr_debug.h  libmsr_error.h  memhdlr.h  msr_clocks.h  msr_core.h  msr_counters.h  msr_misc.h  msr_rapl.h  msr_thermal.h  msr_turbo.h  profile.h  signalCombined.h
lib/: README
localConfig.d/: localConfig.template  pedestalConfig  tlcc2Config
mpi/: .gitignore  Makefile  harness.c  makeRAPL.out  noturbo.w  query.out  query.w  rapl.w  run.sh  wrap.py
msrmod/: CMakeLists.txt  Makefile  README.md  msrmod.c
patches/: fix_hyperthreads_enabled.patch
platform_headers/: Intel2D.h  Intel3E.h  Intel3F.h  Intel4F.h  Intel55.h  Intel57.h
search/: all_64.js  all_69.js  all_6a.js  all_6d.js  all_6e.js  all_72.js  all_73.js  all_76.js  all_77.js  classes_66.js  classes_6d.js  classes_70.js  defines_63.js  defines_64.js  defines_6d.js  defines_74.js  enums_63.js  enumvalues_62.js  enumvalues_6c.js  enumvalues_72.js  enumvalues_73.js  enumvalues_74.js  files_6d.js  files_73.js  functions_61.js  functions_67.js  functions_6c.js  functions_6d.js  functions_6e.js  functions_72.js  functions_73.js  functions_74.js  search.js  variables_61.js  variables_69.js  variables_6a.js  variables_6c.js  variables_6d.js  variables_6e.js  variables_73.js  (+2 more)
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpuid.c  cpuid.c.orig  csr_core.c  csr_imc.c  libmsr_error.c  memhdlr.c  msr_clocks.c  msr_clocks.h  msr_core.c  msr_core.c.orig  msr_counters.c  msr_misc.c  msr_rapl.c  msr_rapl.c.orig  msr_rapl.h  msr_thermal.c  msr_turbo.c  profile.c  signalCode.c  signalCombined.c  signalCombined.c.orig  signalPower.c  signalPower.h
src/CMake/: Setup3rdParty.cmake  SetupExternalProjects.cmake
test/: .gitignore  CMakeLists.txt  Makefile  csr_test.c  libmsr_dump_data.c  libmsr_powercap_test.c  libmsr_test.c  mpi_test.c  msr.msub  power_cap_test.c  power_unit_test.c  pstate_test.c  read_rapl_data.c  serial_test.c  translate_pkg_rapl_limit.c  turbo_test.c
test_therm_lib/: msr_fake.h
wrap/: CMakeLists.txt  README  wrap.py
(+86 files in other folders)
